--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,6 +2,7 @@
 if FOUND_CHECK
 
 TESTS = check_qsearch
+ACLOCAL_AMFLAGS = -I m4
 
 check_PROGRAMS = check_qsearch
 check_qsearch_SOURCES = check_qsearch.c check_neighborlist.c check_tree.c check_treemaster.c
