--- a/Makefile.am
+++ b/Makefile.am
@@ -24,6 +24,7 @@
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 SUBDIRS=src tests
+ACLOCAL_AMFLAGS = -I m4
 #INSTALL_DATA=$(INSTALL)
 #INSTALLdir=${datadir}/qsearch
 
